[project]
name = "telegram-interactive-bot"
version = "0.1.0"
description = "Telegram interactive bot - bidirectional customer service robot"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot >= 21.3",
    "python-dotenv >= 1.0.1",
    "sqlalchemy >= 2.0.31",
    "httpx >= 0.27.0",
    "pytz >= 2024.1",
    "apscheduler >= 3.10.4",
]

[tool.uv]
package = false

[dependency-groups]
dev = []
